example/ex01/ex01-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ex01-nodejs-service
spec:
  selector:
    app: ex01-nodejs
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
