example/ex01/ex01-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ex01-nodejs-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
  - hosts:
    - ex01-nodejs
  rules:
  - host: ex01-nodejs
    http:
      paths:
      - path: /
        backend:
          serviceName: ex01-nodejs-service
          servicePort: 8080
